fix: key conflict & focus visible style in header menu items

--- a/src/layouts/Header/components/HeaderMenu/HeaderMenuItem/HeaderMenuItem.module.scss
+++ b/src/layouts/Header/components/HeaderMenu/HeaderMenuItem/HeaderMenuItem.module.scss
@@ -13,7 +13,7 @@
     text-decoration: underline;
   }
 
-  a:focus-visible {
+  &:focus-visible {
     border-radius: 4px;
     outline: 1px solid var(--color-gray-medium);
     transition: none;
